<resources>
    <string name="app_name">FactoryTest</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="action_settings">Настройки</string>
    <string name="drawer_item_home">Главная</string>
    <string name="nd_settings">Настройки</string>
    <string name="drawer_item_help">Помощь</string>
    <string name="sign_in_fb">Войти через соц. сеть</string>
    <string name="sign_in_google">Войти через Google</string>
    <string name="or">или</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="register">Создать аккаунт</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_password_text">Забыли пароль?</string>
    <string name="title_activity_login">СССР</string>
    <string name="title_activity_home">Карта</string>
    <string name="welcome_login">Привет! Заходи!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_register">Регистрация</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="select_strategy">Выберете стратегию путешествия</string>
    <string name="multiplayergame">Командная игра</string>
    <string name="oneplayer">Одиночная игра</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_captured_text">Ура! Захват удался!</string>
    <string name="dialog_captured_continue">Продолжить</string>
    <string name="dialog_captured_toofar">Эх! Рядом нет достопримечательностей</string>
    <string name="dialog_captured_alLcap">Увы, но вы всё уже захватили.</string>
    <string name="nd_logout">Выйти</string>
    <string name="nd_home">Карта</string>
    <string name="nd_rating">Рейтинг</string>
    <string name="nd_allplaces">Все места</string>
    <string name="debug_server_url">192.168.0.65</string>
    <string name="prod_server_url">bardin.petr.fvds.ru</string>
    <string name="title_activity_profile">Профиль</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile_captured">Захвачено</string>
    <string name="profile_achievements">Достижения</string>
    <string name="profile_settings">Настройки</string>
    <string name="pia_card_info">Информация</string>
    <string name="pia_card_test">Информация</string>
    <string name="title_activity_place_info">Информация</string>
</resources>